# wzk

./: .gitignore  CLAUDE.md  agent.md  conftest.py  pixi.toml  pyproject.toml  ruff.toml  setup.py  setup_manually_with_cpp.py
docs/: README.md
src/wzk/: functions.py  logger.py  mp2.py  splines.py  subprocess2.py  testing.py
src/wzk/alg/: optimal_sets.py
src/wzk/altlast/: __init__.py
src/wzk/gcp/: __init__.py  _run.py
src/wzk/gcp/scripts/: gcp_l4_machine_creation_metadata.md
src/wzk/jax2/: find.py
src/wzk/mpl2/: DraggablePatches.py  Patches2.py  axes.py  ticks.py
src/wzk/np2/: __init__.py  basics.py  tile.py
src/wzk/tests/: test_ltd.py  test_np2.py  test_trajectory.py
src/wzk/wandb2/: __init__.py
wzk/: __init__.py  bimage.py  binary.py  combi.py  context.py  datetime2.py  dlr.py  dtypes2.py  files.py  geometry.py  git2.py  grid.py  image.py  interpolation.py  key_widgets.py  limits.py  logger.py  ltd.py  math2.py  meshes.py  mp2.py  obj.py  perlin.py  pip2.py  printing.py  random2.py  splines.py  sql2.py  stats.py  strings.py  subprocess2.py  testing.py  time2.py  training.py  trajectory.py  units.py  video.py
wzk/alg/: __init__.py  ga_kofn.py  icp.py  optimal_sets.py  tsp.py
wzk/altlast/: __init__.py  slow_down_time.py
wzk/cpp2py/: meshlib.py
wzk/cpp2py/MinSphere/: setup.py
wzk/cpp2py/gjkepa/: setup.py  test.py
wzk/environ/: __multiprocessing2.py
wzk/examples/: draggable_circles.py
wzk/gcp/: __init__.py  _compute.py  _config.py  _run.py  _ssh.py  _storage.py  _zones.py  gcloud2.py  run.py  save_image.py  startup.py  vm.py
wzk/gcp/scripts/: _gpu_config.sh  run_bench.sh  run_script.sh  run_test.sh  save_image.sh  vm.sh
wzk/io/: files.py  hash2.py  sql2.py
wzk/jax2/: __init__.py  _types.py  basics.py  dtypes2.py  find.py  geometry.py  math2.py  np2.py  random2.py  range.py  reshape.py  shape.py  tile.py
wzk/math/: __init__.py  bayes.py  binary.py  geometry.py  math2.py
wzk/mc2/: plotting.py
wzk/mc2/tests/: plotting.py  try.py
wzk/misc/: pdf.py
wzk/mpl2/: DraggableConfigurationSpace.py  DraggablePatches.py  Patches2.py  __init__.py  axes.py  backend.py  bimage.py  bimage_boundaries.py  categorical.py  colors2.py  figure.py  geometry.py  legend.py  move_figure.py  plotting.py  specific.py  styles.py  threed.py  ticks.py  widgets.py
wzk/mpl2/tests/: test_DraggableConfigurationSpace.py  test_DraggablePatches.py  test_Patches2.py  test_figure.py  test_geometry.py  test_legend.py  test_move_figure.py  test_plotting.py  test_ticks.py
wzk/np2/: __init__.py  _types.py  basics.py  dtypes2.py  find.py  np2.py  range.py  reshape.py  shape.py  tile.py
wzk/opt/: __init__.py  gd.py  optimizer.py  pyOpt2.py  random.py  wls.py
wzk/parallel/: joblib.py
wzk/pl2/: __init__.py  colors2.py  pl2.py
wzk/random/: perlin.py  random2.py
wzk/shinka2/: __init__.py  _config.py  _evaluate.py  _proxy.py  _rescore.py  _runner.py
wzk/spatial/: __init__.py  dh.py  difference.py  discrete.py  random.py  transform.py  transform_2d.py  util.py
wzk/spatial/tests/: test_random.py  test_transform.py
wzk/svg/: util.py
wzk/tests/: mac.py  test_bimage.py  test_files.py  test_geometry.py  test_image.py  test_jax2_geometry_parity.py  test_jax2_math2_parity.py  test_jax2_np2_parity.py  test_jax2_random2_parity.py  test_ltd.py  test_math2.py  test_multiprocessing2.py  test_np2.py  test_printing.py  test_random2.py  test_ray2.py  test_spatial.py  test_splines.py  test_sql2.py  test_strings.py  test_time.py  test_training.py  test_trajectory.py  test_tsp.py  test_tsp_order_q.py  test_wls.py  trt_einops.py
wzk/util/: cpu.py
wzk/viser2/: __init__.py  io.py  viser2.py
wzk/wandb2/: __init__.py  artifacts.py  core.py  plotting.py
