[project]
authors = [{name = "Johannes Tenhumberg", email = "johannes.tenhumberg@gmail.com"}]
name = "wzk"
requires-python = "== 3.13"
version = "0.1.1"
dependencies = [
    "numpy>2.0",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "einops",
    "msgpack>=1.1.2,<2",
    "ortools>=9.14.6206,<10",
    "matplotlib",
    "plotly",
    "yourdfpy>=0.0.59",
    "viser>=1.0.15,<2",
    "trimesh>=4.10.0,<5",
    "joblib",
    "fire",
    "meshcat>=0.3.2,<0.4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
wzk = { path = ".", editable = true }

[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.10,<0.0.11"
hatchling = ">=1.27.0,<2"


# Ruff
[tool.ruff]
target-version = "py313"
indent-width = 4
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".pixi",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "Q", "F", "W"]
ignore = ["E741"]
unfixable = ["F401", "F841"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files.
"__init__.py" = ["F401", "E402", "F403"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
