[project]
authors = [{name = "Johannes Tenhumberg", email = "johannes.tenhumberg@gmail.com"}]
name = "wzk"
requires-python = ">=3.13,<3.14"
version = "0.1.1"
dependencies = [
    "einops>=0.8",
    "fire>=0.7",
    "jax>=0.9.0.1",
    "jaxtyping>=0.3.7",
    "joblib>=1.4",
    "matplotlib>=3.10",
    "meshcat>=0.3.2,<0.4",
    "msgpack>=1.1.2,<2",
    "numpy>2.0",
    "plotly>=6.0",
    "scikit-image>=0.24",
    "scikit-learn>=1.5",
    "scipy>=1.15",
]

[project.optional-dependencies]
bayes = ["bayesian-optimization>=1.5"]
gcp = ["google-cloud-compute>=1.22", "google-cloud-storage>=2.18"]
image = ["pillow>=10"]
input = ["pynput>=1.8"]
ortools = ["ortools>=9.14.6206,<10"]   # pypi-only (not on conda-forge)
pandas = ["pandas>=2.0"]
pdf = ["pikepdf>=10"]
pyopt = ["pyOpt"]                       # pypi-only (not on conda-forge)
shinka = ["shinka"]                     # pypi-only (not on conda-forge)
swarms = ["pyswarms>=1.3"]
wandb = ["wandb>=0.19"]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


# Ruff


[tool.ty.src]
include = ["./", "src/", "tests/"]
exclude = [".venv/"]

[tool.ty.rules]
# Suppress false positives from numpy/matplotlib typing
not-subscriptable = "ignore"
invalid-argument-type = "ignore"
unsupported-operator = "ignore"
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
invalid-parameter-default = "ignore"
not-iterable = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
call-non-callable = "ignore"
unknown-argument = "ignore"
missing-argument = "ignore"
invalid-method-override = "ignore"
positional-only-parameter-as-kwarg = "ignore"
invalid-declaration = "ignore"
possibly-missing-attribute = "ignore"
unused-type-ignore-comment = "warn"
# Optional dependencies
unresolved-import = "ignore"

[tool.ty.environment]
python-version = "3.13"


